--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,8 @@
-@import './common';
-@import './example';
+@import './base/common';
+@import './util/mixin';
+@import './util/vars';
+@import './util/util-classes';
+@import './components/header';
+@import './components/hero';
+
+
