тут буде хедер ;)

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,5 @@
 <header class="header">
+    тут буде хедер ;)
   <div class="container header__container">
     <a class="logo" href="#"></a>
     <nav class="nav" data-nav>
