--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -16,7 +16,10 @@
                 <img class="hero__img" src="./image/cocktail-mob.jpg" alt="cocktail" min-width="300">
             </picture>
             <p class="hero__text">Search your favorite cocktail by ABC</p>
-            <ul class="hero__list"></ul>
+           <div class="div__input" data-type="input">A <svg class="cocktail__svg" width="11" height="24"><use href="./image/icon.svg#vector-i"/></svg>
+            <ul class="hero__list open"></ul></div>
+            <div class="content__div">
+            <ul class="list_lit"></ul></div>
         </div>
   
 </section>
