--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -32,7 +32,7 @@
     min-width: 336px;
     position: absolute;
     right: 3%;
-    top: 0;
+    top: 15%;
     margin-left: 0;
     margin-right: 0;
   }
@@ -64,5 +64,91 @@ width: 280px;
     width: 340px;
     font-size: 18px;
     line-height: 1.55;
+  }
+}
+
+.div__input {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 135%;
+  padding: 6px 10px;
+  height: 34px;
+  width: 93px;
+  border: 1px solid $hover-color;
+  color: $hover-color;
+  outline: none;
+  border-radius: 4px;
+  display: flex;
+  margin: 0 auto;
+  position: relative;
+
+  @media screen and(min-width:$tablet) {
+    display: none;
+  }
+}
+
+.cocktail__svg {
+  fill: $hover-color;
+  position: absolute;
+  top: auto;
+  right: 15%;
+  transform: rotate(90deg);
+
+  @media screen and(min-width:$tablet) {
+    display: none;
+  }
+}
+
+.hero__list {
+  width: 93px;
+  height: 84px;
+  border: 1px solid $hover-color;
+  position: absolute;
+  right: -1%;
+  top: 100%;
+  border-radius: 4px;
+  overflow-y: scroll;
+  display: block;
+  padding: 6px 10px;
+  z-index: 100;
+  color: #5f6775;
+
+  @media screen and(max-width:$tablet) {
+    &.open {
+      display: none;
+    }
+  }
+}
+
+.hero__item {
+  font-weight: 700;
+  font-size: 10px;
+  line-height: 15px;
+  color: #5f6775;
+  display: block;
+
+  &:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+
+.list_lit {
+  display: none;
+
+  @media screen and(min-width:$tablet) {
+    display: flex;
+
+  }
+}
+
+.hero__items {
+  text-align: start;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 21px;
+  color: #5f6775;
+
+  &:not(:last-child) {
+    margin-right: 5px;
   }
 }
