--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -1,33 +1,32 @@
 .hero__title {
-    position: relative;
-    font-weight: 600;
-    font-size: 22px;
-    line-height: 1.9;
-    width: 300px;
-    margin-bottom: 28px;
-    color: $hover-color;
+  position: relative;
+  font-weight: 600;
+  font-size: 22px;
+  line-height: 1.9;
+  width: 300px;
+  margin-bottom: 28px;
+  color: $hover-color;
 
-    @media screen and(min-width:$tablet) {
-        width: 343px;
-        font-size: 26px;
-            line-height: 1.6;
-        margin-bottom: 40px;
-        margin-top: 55px;
-      
-    }
+  @media screen and(min-width:$tablet) {
+    width: 343px;
+    font-size: 26px;
+    line-height: 1.6;
+    margin-bottom: 40px;
+    margin-top: 55px;
+  }
 
-    @media screen and(min-width:$desk) {
-        font-size: 52px;
-        line-height: 1.53;
-        width: 688px;
-        height: 160px;
-    }
+  @media screen and(min-width:$desk) {
+    font-size: 52px;
+    line-height: 1.53;
+    width: 688px;
+    height: 160px;
+  }
 }
 .hero__img {
-    min-width: 300px;
-    position: relative;
-        right: 1;
-            top: 0;
+  min-width: 300px;
+  position: relative;
+  right: 1;
+  top: 0;
   @media screen and(min-width:$tablet) {
     min-width: 336px;
     position: absolute;
@@ -36,10 +35,10 @@
     margin-left: 0;
     margin-right: 0;
   }
-        @media screen and(min-width:$desk) {
-            min-width: 501px;
-            right: 0.5%;
-        }
+  @media screen and(min-width:$desk) {
+    min-width: 501px;
+    right: 0.5%;
+  }
 }
 
 .hero__text {
@@ -52,7 +51,7 @@
   opacity: 0.8;
   text-align: center;
   color: #000000;
-width: 280px;
+  width: 280px;
   @media screen and(min-width:$tablet) {
     width: 300px;
     margin-top: 0;
@@ -67,7 +66,7 @@ width: 280px;
   }
 }
 
-.div__input {
+.hero__content {
   font-weight: 700;
   font-size: 16px;
   line-height: 135%;
@@ -79,18 +78,24 @@ width: 280px;
   outline: none;
   border-radius: 4px;
   display: flex;
+  justify-content: space-between;
   margin: 0 auto;
   position: relative;
 
   @media screen and(min-width:$tablet) {
     display: none;
   }
+  @media screen and(max-width:$tablet) {
+    &.open {
+      display: block;
+    }
+  }
 }
 
-.cocktail__svg {
+.hero__svg {
   fill: $hover-color;
   position: absolute;
-  top: auto;
+  top: -5%;
   right: 15%;
   transform: rotate(90deg);
 
@@ -98,13 +103,23 @@ width: 280px;
     display: none;
   }
 }
+.hero-content__btn {
+  border: 0;
+  margin: 0;
+  background-color: transparent;
+  display: flex;
+  width: 24px;
+  height: 24px;
+  padding: 0;
+  position: relative;
+}
 
 .hero__list {
   width: 93px;
   height: 84px;
   border: 1px solid $hover-color;
   position: absolute;
-  right: -1%;
+  right: -2%;
   top: 100%;
   border-radius: 4px;
   overflow-y: scroll;
@@ -119,36 +134,88 @@ width: 280px;
     }
   }
 }
-
 .hero__item {
-  font-weight: 700;
-  font-size: 10px;
-  line-height: 15px;
-  color: #5f6775;
-  display: block;
-
   &:not(:last-child) {
     margin-bottom: 10px;
   }
 }
 
-.list_lit {
+.hero__button {
+  border: 0;
+  margin: 0;
+  background-color: transparent;
+  font-weight: 700;
+  font-size: 10px;
+  line-height: 1.5;
+  color: #5f6775;
+  display: block;
+}
+
+.hero__roster {
   display: none;
 
   @media screen and(min-width:$tablet) {
     display: flex;
-
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 325px;
+  }
+  @media screen and(min-width:$desk) {
+    width: 520px;
   }
 }
 
-.hero__items {
-  text-align: start;
+.hero__it {
+  &:not(:last-child) {
+    margin-right: 1px;
+  }
+}
+
+.hero__knob {
+  border: 0;
+  margin: 0;
+  background-color: transparent;
+  padding: 0;
+  width: 24px;
   font-weight: 700;
   font-size: 14px;
-  line-height: 21px;
+  line-height: 1.5;
   color: #5f6775;
-
-  &:not(:last-child) {
-    margin-right: 5px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  &:hover,
+  &:focus {
+    color: $hover-color;
   }
+  @media screen and(min-width:$desk) {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 1.5;
+    width: 39px;
+    &:hover,
+    &:focus {
+      text-shadow: 0px 7px 4px rgba(0, 0, 0, 0.25);
+      color: $hover-color;
+    }
+  }
+}
+.select__backdrop {
+  position: fixed;
+  display: none;
+  z-index: -1;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  background: transparent;
+}
+.sorry__title {
+  text-align: center;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 1.3;
+  color: $text-black;
 }
