--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -2,6 +2,10 @@
 @import './util/mixin';
 @import './util/vars';
 @import './util/util-classes';
+@import './components/mobile-menu';
+@import './components/modal-coctails';
+@import './components/modal-ingred';
+@import './layout/main';
 @import './components/header';
 @import './components/hero';
 
