--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -114,7 +114,7 @@
   }
 }
 
-.gallery__card-img {
+.gallery__card-images {
   display: block;
   width: 100%;
   border-radius: 14px;
@@ -209,7 +209,7 @@
   width: 110px;
   height: 39px;
   background: transparent;
-  background-image: url('../img/heart-empty.png');
+  background-image: url('../images/heart-empty.png');
   background-repeat: no-repeat;
   background-position: 74px 10px;
   background-size: 18px 16px;
@@ -230,7 +230,7 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover {
-    background-image: url('../img/heart-orng.png');
+    background-image: url('../images/heart-orng.png');
     background-color: #fd520317;
   }
 
@@ -250,7 +250,7 @@
 }
 
 .btn__svg-fav {
-  background-image: url('../img/heart-orng.png');
+  background-image: url('../images/heart-orng.png');
   background-color: #fd520317;
 }
 
@@ -343,7 +343,7 @@
   }
 }
 
-.sorry__img {
+.sorry__images {
   max-width: 345px;
   width: 100%;
   margin-right: auto;
