--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,4 +1,4 @@
-.footer__container{
+.footer__container {
     width: 320px;
     height: 110px;
     background-color: $hover-color;
@@ -8,4 +8,8 @@
                  @media screen and(min-width:$tablet) {
                      width: 1280px;
                  }
+}
+
+.footer {
+    background-color: aquamarine;
 }
