--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="footer">
     <div class="footer__container">
-      <p class="footer__title">©2022 COCKTAILS</p>
+      <p class="footer__title"></p>
     </div>
   </div>
 </footer>
